# lamcity

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
lamcity/: apps.py  views.py
templates/: base.html  generic_form.html  profile.html
user_account/: admin.py  forms.py  models.py  urls.py  views.py
user_account/migrations/: 0001_initial.py  0002_alter_useraccount_picture.py
