[tool.poetry]
name = "lamcity"
version = "0.1.0"
description = ""
authors = ["Jacob-Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
